add name on man page and change order of cd and compilation on readme

--- a/hsh.1
+++ b/hsh.1
@@ -58,7 +58,7 @@ Run a script:
 .EE
 
 .SH AUTHOR
-Written as part of the \fBSimple Shell\fR project at HolbertonSchool.
+Written as part of the \fBSimple Shell\fR project at HolbertonSchool by  Chermat Mustapha && Saniez-lenthieul Christophe.
 
 .SH SEE ALSO
 .BR sh (1),
